# PolitechnikaLodzka_OOP_CPP_Warsztaty_i_Projekt

./: .gitignore  README.md  branch_test
ProjectUML/: project.conf
ProjectUML/.runtime/: .save  projectInfo.html
ProjectUML/.runtime/fragments/Project1/.index/: index.dbf.0  index.dbr.0  index.idf.0  index.idr.0
ProjectUML/data/fragments/Project1/model/Infrastructure.DiagramSet/: 3a577e72-5a87-4aa6-b8e6-baf6faf572c9.exml
ProjectUML/data/fragments/Project1/model/Infrastructure.ModuleComponent/: 2baa8740-53b7-4459-8d82-ace9d210822d.exml
ProjectUML/data/fragments/Project1/model/Infrastructure.Profile/: 1ddcbefb-3b33-42f8-9893-8aa782c438c9.exml
ProjectUML/data/fragments/Project1/model/Standard.Class/: 13138a79-5de0-4d14-bed6-69cc6b758fbe.exml  15c322a2-5ec0-4e29-ba4c-7e49dc1e5b64.exml  7b5f5840-17b0-455e-bd66-7126ad556555.exml  82619b82-6b1f-48de-8e65-9a6814639378.exml  92c2ecee-d35b-4de1-b6c3-6ddb948e4610.exml  a16bbd1a-3772-48f2-9e66-1389cac086b5.exml  (+3 more)
ProjectUML/data/localmodel/: localmodel.dbf.0
farski/introduction/: CMakeLists.txt
farski/introduction/program/: CMakeLists.txt
farski/introduction/program/src/: main.cpp
farski/workshop/: CMakeLists.txt
farski/workshop/program/: CMakeLists.txt
farski/workshop/program/src/: main.cpp
project/: CMakeLists.txt
project/program/: CMakeLists.txt
project/program/src/: main.cpp
swietlik/introduction/: CMakeLists.txt
swietlik/introduction/program/src/: main.cpp
swietlik/workshop/program/: CMakeLists.txt
swietlik/workshop2/program/src/: main.cpp
swietlik/workshop3/program/src/: main.cpp
(+6 files in other folders)
